test/error/syntax/missing_type_param.kat
func main(argc: , argv: str) => int {
  let i: int = 1;
  let j: int = 2;
}
